syntax = "proto3";
package attacks.shared;

import "google/protobuf/timestamp.proto";

// Representation of an ipv4 address
message Ipv4 {
  sfixed32 address = 1;
}

// Representation of an ip4 net
message Ipv4Net {
  Ipv4 address = 1;
  sfixed32 netmask = 2;
}

// Representation of an ipv6 address
message Ipv6 {
  sfixed64 part0 = 1;
  sfixed64 part1 = 2;
}

// Representation of an ipv6 net
message Ipv6Net {
  Ipv6 address = 1;
  sfixed64 netmask0 = 2;
  sfixed64 netmask1 = 3;
}

// Enum of addresses
message Address {
  oneof address {
    Ipv4 ipv4 = 1;
    Ipv6 ipv6 = 2;
  }
}

// Enum of nets
message Net {
  oneof net {
    Ipv4Net ipv4net = 1;
    Ipv6Net ipv6net = 2;
  }
}

// A net or address
message NetOrAddress {
  oneof net_or_address {
    Address address = 1;
    Net net = 2;
  }
}

// A record representation
message A {
  string source = 1;
  Ipv4 to = 2;
}

// AAAA record representation
message AAAA {
  string source = 1;
  Ipv6 to = 2;
}

// GenericRecord record representation
message GenericRecord {
  string source = 1;
  string to = 2;
}

// Generic DNS record representation
message DNSRecord {
  oneof record {
    // IPv4 address
    A a = 1;
    // IPv address
    AAAA aaaa = 2;
    // Certificate authority authorization
    GenericRecord caa = 3;
    // Canonical name
    GenericRecord cname = 4;
    // Mail exchange
    GenericRecord mx = 5;
    // Certificate association for TLS
    GenericRecord tlsa = 6;
    // Human readable text
    GenericRecord txt = 7;
  }
}


// Entry of a certificate transparency response
message CertEntry {
  // The name of the issuer
  string issuer_name = 1;
  // The common name of the certificate
  string common_name = 2;
  // The values of the certificate
  repeated string value_names = 3;
  // The start date of the certificate
  google.protobuf.Timestamp not_before = 4;
  // The end date of the certificate
  google.protobuf.Timestamp not_after = 5;
  // The serial number of the certificate
  string serial_number = 6;
}